# Homebridge_Monitor

./: .gitignore  CHANGELOG.md  README.md  fix_ruff_mypy_hassfest.patch  hacs.json  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml  ruff_fix_dispatch.yaml
custom_components/homebridge_monitor/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  services.yaml  strings.json  update.py
custom_components/homebridge_monitor/translations/: de.json  en.json  es.json  fr.json  pt.json
