[tool.ruff]
# Project settings (compatible con la acción astral-sh/ruff-action)
line-length = 88
target-version = "py311"

# Files/dirs to exclude from linting
exclude = [
  "build",
  "dist",
  ".venv",
  ".git",
  "__pycache__",
  ".venv/**",
  "venv/**",
]

# Ignore E203 to be compatible con Black
extend-ignore = ["E203"]

# Enable import-order checks (ruff's 'I' rules)
extend-select = ["I"]

[tool.ruff.per-file-ignores]
# Allow __init__.py files to have unused imports for export-style re-exports.
"custom_components/*/__init__.py" = ["F401"]

[project]
name = "homebridge_monitor"
version = "0.1.0"
description = "Home Assistant custom integration - Homebridge Monitor"
readme = "README.md"
license = "MIT"
