[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  "build",
  "dist",
  ".venv",
  ".git",
  "__pycache__",
  ".venv/**",
  "venv/**",
]

[tool.ruff.lint]
extend-ignore = ["E203"]
extend-select = ["I"]
per-file-ignores = { "custom_components/*/__init__.py" = ["F401"] }

[project]
name = "homebridge_monitor"
version = "0.1.0"
description = "Home Assistant custom integration - Homebridge Monitor"
readme = "README.md"
license = "MIT"
